[tool.isort]
profile = "black"

[tool.poetry]
name = "django-nordigen"
version = "0.1.0"
description = ""
authors = ["Alex Morega <alex@grep.ro>"]
readme = "Readme.md"
packages = [{include = "django_nordigen"}]

[tool.poetry.dependencies]
python = "^3.10"
nordigen = "^1.3.0"
django = "^4.1.7"


[tool.poetry.group.dev.dependencies]
poetry = "^1.4.0"
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
